FT#CDE-3784-RCA-Phase-1: - grouping pelanggan (owner -> name)

--- a/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
+++ b/src/app/pages/remote-call-activation/grouping-pelanggan/index/grouping-pelanggan-index.component.html
@@ -176,7 +176,7 @@
                       'Kosong, Klik untuk merubah' }}</a>
                   </ng-template>
                 </ngx-datatable-column>
-                <ngx-datatable-column name="Customer Name" prop="owner"></ngx-datatable-column>
+                <ngx-datatable-column name="Customer Name" prop="name"></ngx-datatable-column>
                 <ngx-datatable-column name="Customer Code" prop="code" [sortable]="false"></ngx-datatable-column>
                 <ngx-datatable-column name="Territory Code" prop="teritory_code" [sortable]="false">
                 </ngx-datatable-column>
