--- a/src/app/pages/b2-bvoucher/index/b2-b-voucher.component.html
+++ b/src/app/pages/b2-bvoucher/index/b2-b-voucher.component.html
@@ -17,7 +17,7 @@
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="{{ ls.locale.glboal.label.search }}" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+            <input matInput placeholder="{{ ls.locale.global.label.search }}" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
           </mat-form-field>
         </div>
       </div>
