--- a/src/app/shared/target-area/dialog-import/dialog-import.component.html
+++ b/src/app/shared/target-area/dialog-import/dialog-import.component.html
@@ -1,4 +1,4 @@
-<div class="dialog-content-wrapper" style="width:800px;">
+<div class="dialog-content-wrapper" style="width: 800px">
   <mat-toolbar matDialogTitle class="m-0" fxFlex="1 0 auto" fxLayout="row">
     <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
       <div fxFlex fxLayout="row" fxLayoutAlign="start center">
@@ -36,6 +36,9 @@
         </span>
       </div>
     </div>
+    <div *ngIf="isUploaded && !isValid" class="notif notif-error mt-24">
+      Silahkan cek kembali produk yang anda upload!
+    </div>
     <div *ngIf="rows.length > 0" class="preview">
       <div class="preview-container">
         <table class="preview-table">
@@ -48,7 +51,10 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of rows" [ngClass]="{ 'error': item.is_valid < 0 }">
+            <tr
+              *ngFor="let item of rows"
+              [ngClass]="{ error: item.is_valid < 0 }"
+            >
               <td nowrap>
                 {{ item.area_code }}
               </td>
@@ -59,7 +65,7 @@
                 {{ item.zone || "-" }}
               </td>
               <td nowrap>
-                {{ item.is_valid === 0 ? '-' : 'Area'}}
+                {{ item.is_valid === 0 ? "-" : "Area" }}
               </td>
             </tr>
           </tbody>
