--- a/src/app/shared/target-area/dialog-import/dialog-import.component.scss
+++ b/src/app/shared/target-area/dialog-import/dialog-import.component.scss
@@ -14,26 +14,44 @@
   width: 100%;
   border-collapse: collapse;
 
-  th, td {
-      padding: 8px;
+  th,
+  td {
+    padding: 8px;
   }
   th {
-      border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #eee;
   }
   tr:nth-child(odd) td {
-      background: #f5f5f5;
+    background: #f5f5f5;
   }
   .price {
-      text-align: right;
+    text-align: right;
   }
   .status {
-      text-align: center;
+    text-align: center;
   }
   tr.error td {
-      color: red;
+    color: red;
   }
 }
 
 .preview-total {
   padding-top: 24px;
+}
+
+.notif {
+  font-weight: 700;
+  border-radius: 4px;
+  box-sizing: border-box;
+  display: block;
+  margin: auto;
+  max-width: 400px;
+  min-width: 300px;
+  padding: 14px 16px;
+  min-height: 48px;
+
+  &-error {
+    background: red;
+    color: #fff;
+  }
 }
