--- a/src/app/pages/b2b-voucher-inject/redeem-list/redeem-list.component.html
+++ b/src/app/pages/b2b-voucher-inject/redeem-list/redeem-list.component.html
@@ -118,7 +118,7 @@
 
     <ngx-datatable-column name="Nilai Voucher" prop="nominal">
       <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-        {{row.nominal | rupiahFormater }}
+        {{row.nominal_format_currency }}
       </ng-template>
     </ngx-datatable-column>
 
