--- a/src/app/pages/dte/mission-builder/create/mission-builder-create.component.html
+++ b/src/app/pages/dte/mission-builder/create/mission-builder-create.component.html
@@ -197,7 +197,7 @@
           <mat-card style="padding: 0px;">
             <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px" class="stats-cards content p-12">
               <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">Total Budget Used : </div>
-              <div fxFlex="40" class="h2">IDR {{budget}}</div>
+              <div fxFlex="40" class="h2">{{ ls.locale.global.currency_code }} {{budget}}</div>
             </div>
           </mat-card>
         </div>
