--- a/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
+++ b/src/app/pages/b2b-voucher-inject/create/b2b-voucher-inject-create.component.html
@@ -351,7 +351,7 @@
                 </ngx-datatable-column>
                 <ngx-datatable-column name="Nilai Voucher" prop="nominal">
                   <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-                    {{row.nominal | rupiahFormater}}
+                    {{ row.nominal_format_currency }}
                   </ng-template>
                 </ngx-datatable-column>
               </ngx-datatable>
