--- a/src/app/pages/dte/coin-disburstment/index/import-exchange-coin/import-exchange-coin.component.html
+++ b/src/app/pages/dte/coin-disburstment/index/import-exchange-coin/import-exchange-coin.component.html
@@ -77,7 +77,7 @@
               {{ item.status_pembayaran }}
             </td>
             <td nowrap>
-              {{ item.nominal_pembayaran | rupiahFormater }}
+              {{ item.nominal_pembayaran_format_currency }}
             </td>
             <td nowrap>
               {{ item.tanggal_pembayaran | date: 'dd/MM/yyyy' }}
