--- a/src/app/pages/dte/mission-builder/edit/mission-builder-edit.component.html
+++ b/src/app/pages/dte/mission-builder/edit/mission-builder-edit.component.html
@@ -186,7 +186,7 @@
             <div fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="16px"
               class="stats-cards content p-12">
               <div fxFlex="60" class="h2" style="margin-right: 0px; text-align: right;">Total Budget Used : </div>
-              <div fxFlex="40" class="h2">IDR {{task.total_budget}}</div>
+              <div fxFlex="40" class="h2">{{ ls.locale.global.currency_code }} {{task.total_budget}}</div>
             </div>
           </mat-card>
         </div>
